rewrite of new window sizing and placement. bug 239876. also addresses bugs 118717,176342,183633,240381. r=jag sr=blizzard (previous version of patch)